# Habit_Manager

./: .env.example  .gitattributes  .gitignore  Dockerfile  Habit_Manager  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yaml  manage.py  pyproject.toml  schema.yml
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  beat_schedule.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_pleasanthabit_reward_usefulhabit_and_more.py  0004_remove_usefulhabit_related_habit_and_more.py
habits/tests/: test_models.py  test_services.py  test_tasks.py  test_views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
