[tool.poetry]
name = "habit-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
attrs = "^24.3.0"
requests = "^2.32.3"
celery = "^5.4.0"
billiard = "4.2.1"
django-celery-beat = "^2.7.0"
pytz = "^2024.2"
drf-yasg = "^1.21.8"
django-extensions = "^3.2.3"
dj-database-url = "^2.3.0"
redis = "^5.2.1"



[tool.poetry.group.dev.dependencies]
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
